<resources>
    <string name="app_name">BaratheonX</string>
    <string name="bienvenido_a_a_baratheonx">Bienvenido/a a BaratheonX</string>
    <string name="inicio_de_sesi_n">Inicio de Sesión</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="ingresar">Ingresar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="login_restaurante">Login – Restaurante</string>
    <string name="baratheonx">BARATHEONX</string>
    <string name="logo_baratheonx">Logo BaratheonX</string>
    <string name="registro_de_pedido">Registro de Pedido</string>
    <string name="nombre_del_restaurante">Nombre del Restaurante</string>
    <string name="rubro_del_restaurante">Rubro del Restaurante</string>
    <string name="nombre_del_cliente">Nombre del Cliente</string>
    <string name="continuar">Continuar</string>
    <string name="pizzer_a_y_cafeter_a">Pizzería y Cafetería</string>
    <string name="resumen_de_registro">Resumen de Registro</string>
    <string name="restaurante">Restaurante:</string>
    <string name="rubro">Rubro:</string>
    <string name="cliente">Cliente:</string>
    <string name="postres">🍨 Postres</string>
    <string name="caf_s">☕ Cafés</string>
    <string name="pizzas">🍕 Pizzas</string>
    <string name="men_baratheonx">Menú BaratheonX</string>
    <string name="pizzas_baratheonx">Pizzas BaratheonX</string>
    <string name="caf_s_baratheonx">Cafés BaratheonX</string>
    <string name="postres_baratheonx">Postres BaratheonX</string>
    <string name="regresar">Regresar</string>
    <string name="inicio_de_la_sesi_n">Inicio de la Sesión</string>
</resources>